trunk/Archive2/a2/c3bc9de7d89b35/output
main.cpp:3:37: error: 'ulword' has not been declared
 template <typename TAs, typename T, ulword n>
                                     ^
